@@ -44,6 +44,7 @@
 	dirty: false,
 	formClass: 'dirtyForm',
 	beforeUnload: null,
+	unloadCancel: null,
 	onUnload: null,
 	onDirty: function(elem,form) {}
      },
@@ -67,14 +68,22 @@
       $(window).on('beforeunload',function(){
           console.debug('dirtyform beforeunload')
           if( self.options.disabled ) return;
-	  var msg = '';
 	  var res = null;
+	  var msg = '';
           if( self.options.beforeUnload ) res = self.options.beforeUnload(self.options.dirty);
-	  if( self.options.dirty ) {
-	      msg = self.options.unloadmsg;
-	      if( res != null && res.length > 0 ) msg = res;
+	  if( self.options.dirty ) msg = self.options.unloadmsg.trim();
+          if( res != null && res.length > 0 ) msg = res.trim();
+	  if( msg != null && msg.length > 0 ) {
+  	      if( self.options.unloadCancel ) {
+	          setTimeout(function(){
+		      setTimeout(function(){
+			  console.debug('dirtyform unloadCancel');
+		          self.options.unloadCancel();
+		      },250);
+	          },1)
+	      }
+	      return msg;
 	  }
-	  if( msg ) return msg;
       });
       $(window).on('unload',function(){
           if( self.options.disabled ) return;
