@@ -86,7 +86,8 @@
 	}
 
 	if( self.options.lock_timeout ) {
-	  // setup our event handlers
+	    // setup our event handlers
+	    console.log('creating initial lock');
 	  self._setup_handlers();
   	  // do our initial lock.
 	  self._lock();
@@ -181,11 +182,15 @@
       }
     },
 
+    relock: function() {
+        console.log('relocking');
+	this._lock();
+    },
+
     unlock: function() {
-	console.debug('in unlock 1');
+	console.log('unlocking');
 	var self = this;
 	if( self._settings.locked && self._settings.lock_id > 0 ) {
-	    console.debug('in unlock 2');
           // do ajax lock
           var opts = {};
           opts.opt = 'unlock';
@@ -194,14 +199,12 @@
           opts.oid  = this.options.oid;
           opts.uid  = this.options.uid;
           opts.lock_id = this._settings.lock_id;
-	  console.log('test1');
           var jqxhr = $.ajax({
               type: 'POST',
               url: self._settings.ajax_url,
 	      cache: false,
               data: opts
 	  }).done(function(data,textStatus,jqXHR) {
-	      console.debug('in unlock after ajax');
               if( textStatus != 'success' ) throw 'Problem communicating with ajax url '+self._settings.ajax_url;
   	      if( data.status == 'error' ) {
 		  self._error_handler(data.error);
