@@ -51,15 +51,6 @@ try {
     if( isset($params['content_id']) ) $content_id = (int)$params['content_id'];
 
     if( isset($params['cancel']) ) {
-        try {
-            if( $content_id ) {
-                $lock_id = CmsLockOperations::is_locked('content',$content_id);
-                CmsLockOperations::unlock($lock_id,'content',$content_id);
-            }
-        }
-        catch( Exception $e ) {
-            // do nothing.
-        }
         unset($_SESSION['__cms_copy_obj__']);
         $this->SetMessage($this->Lang('msg_cancelled'));
         $this->RedirectToAdminTab();
@@ -182,16 +173,6 @@ try {
             unset($_SESSION['__cms_copy_obj__']);
             audit($content_obj->Id(),'Content Item: '.$content_obj->Name(),' Edited');
             if( isset($params['submit']) ) {
-                try {
-                    if( $content_id ) {
-                        // unconditionally unlock, even if locking is not enabled.
-                        $lock_id = CmsLockOperations::is_locked('content',$content_id);
-                        CmsLockOperations::unlock($lock_id,'content',$content_id);
-                    }
-                }
-                catch( Exception $e ) {
-                    // do nothing.
-                }
                 $this->SetMessage($this->Lang('msg_editpage_success'));
                 $this->RedirectToAdminTab();
             }
@@ -211,16 +192,6 @@ try {
 }
 catch( CmsEditContentException $e ) {
     if( isset($params['submit']) ) {
-        try {
-            if( $content_id ) {
-                // unconditionally unlock, even if locking is not enabled.
-                $lock_id = CmsLockOperations::is_locked('content',$content_id);
-                CmsLockOperations::unlock($lock_id,'content',$content_id);
-            }
-        }
-        catch( Exception $e ) {
-            // do nothing.
-        }
         $this->SetError($e->getMessage());
         $this->RedirectToAdminTab();
     };
@@ -255,10 +226,6 @@ if( $content_id && CmsContentManagerUtils::locking_enabled() ) {
             if( !$lock->expired() ) throw new CmsLockException('CMSEX_L010');
             CmsLockOperations::unlock($lock_id,'content',$content_id);
         }
-        // get a new lock.
-        $lock = new CmsLock('content',$content_id, (int) $this->GetPreference('lock_timeout'));
-        $lock->save();
-        $smarty->assign('lock',$lock);
     }
     catch( CmsException $e ) {
         $this->SetError($e->getMessage());
