@@ -1,20 +1,18 @@
 <script type="text/javascript">
 $(document).ready(function(){
+    var do_locking = {if $tpl_id > 0 && isset($lock_timeout) && $lock_timeout > 0}1{else}0{/if};
     $('#form_edittemplate').dirtyForm({
-        onUnload: function() {
-            $('#form_edittemplate').lockManager('unlock').done(function(){
-	    });
-        }
+        beforeUnload: function(is_dirty) {
+	    if( do_locking ) $('#form_edittemplate').lockManager('unlock');
+        },
+	unloadCancel: function() {
+            if( do_locking ) $('#form_edittemplate').lockManager('relock');
+	}
     });
 
-    $(document).on('cmsms_textchange',function(event){
-        // editor textchange, set the form dirty.
-        $('#form_edittemplate').dirtyForm('option','dirty',true);
-    });
-
-    // initialize lock manager {if isset($tpl_id)}
-
-    $('#form_edittemplate').lockManager({
+    // initialize lock manager
+    if( do_locking ) {
+      $('#form_edittemplate').lockManager({
         type: 'template',
         oid: {$tpl_id},
         uid: {get_userid(FALSE)},
@@ -33,8 +31,13 @@ $(document).ready(function(){
             $('.lock-warning').removeClass('hidden-item');
             alert('{$mod->Lang('msg_lostlock')|escape:'javascript'}');
         }
+      });
+    } // do_locking
+
+    $(document).on('cmsms_textchange',function(event){
+        // editor textchange, set the form dirty.
+        $('#form_edittemplate').dirtyForm('option','dirty',true);
     });
-    // {/if}
 
     $('#form_edittemplate').on('click','[name$=apply],[name$=submit]',function(){
         $('#form_edittemplate').dirtyForm('option','dirty',false);
